testing new faster scrolling method

--- a/facebook_group_file_downloader/bot_v2/main.ipynb
+++ b/facebook_group_file_downloader/bot_v2/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\nYou should be logged in by now!\\n\\nNote\\n----\\nif you have 2fa on for this account then you have to authorize it and then run the remaining cells manually\\n\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,19 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'end_time' referenced before assignment",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32md:\\Projects\\Bots\\facebook_group_file_downloader\\bot_v2\\main.ipynb Cell 3'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=30'>31</a>\u001b[0m         updateLog(\u001b[39m\"\u001b[39m\u001b[39mLoading... \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m, took \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39ms\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(i, n_scroll, end_time))\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=32'>33</a>\u001b[0m     updateLog(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mLoading finished. Took \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39ms\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(time_elapsed))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=35'>36</a>\u001b[0m scrollNTimes(\u001b[39m100\u001b[39;49m)\n",
-      "\u001b[1;32md:\\Projects\\Bots\\facebook_group_file_downloader\\bot_v2\\main.ipynb Cell 3'\u001b[0m in \u001b[0;36mscrollNTimes\u001b[1;34m(n_scroll, timeout)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=16'>17</a>\u001b[0m last_height \u001b[39m=\u001b[39m driver\u001b[39m.\u001b[39mexecute_script(\u001b[39m\"\u001b[39m\u001b[39mreturn document.body.scrollHeight\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=17'>18</a>\u001b[0m driver\u001b[39m.\u001b[39mexecute_script(\u001b[39m\"\u001b[39m\u001b[39mwindow.scrollTo(0, document.body.scrollHeight);\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=19'>20</a>\u001b[0m \u001b[39mwhile\u001b[39;00m end_time \u001b[39m<\u001b[39m timeout:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=20'>21</a>\u001b[0m     \u001b[39m# Wait to load the page\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=21'>22</a>\u001b[0m     waitNSeconds(SCROLL_PAUSE_TIME)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000003?line=22'>23</a>\u001b[0m     new_height \u001b[39m=\u001b[39m driver\u001b[39m.\u001b[39mexecute_script(\u001b[39m\"\u001b[39m\u001b[39mreturn document.body.scrollHeight\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'end_time' referenced before assignment"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb Cell 3'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000002?line=26'>27</a>\u001b[0m         updateLog(\u001b[39m\"\u001b[39m\u001b[39mLoading... \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m, took \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39ms\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(i, n_scroll, end_time))\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000002?line=28'>29</a>\u001b[0m     updateLog(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mScrolling \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m times took \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39ms\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(n_scroll, time_elapsed))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000002?line=31'>32</a>\u001b[0m scrollNTimes(\u001b[39m500\u001b[39;49m)\n",
+      "\u001b[1;32m/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb Cell 3'\u001b[0m in \u001b[0;36mscrollNTimes\u001b[0;34m(n_scroll, timeout)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000002?line=17'>18</a>\u001b[0m driver\u001b[39m.\u001b[39mexecute_script(\u001b[39m\"\u001b[39m\u001b[39mwindow.scrollTo(0, document.body.scrollHeight);\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000002?line=19'>20</a>\u001b[0m \u001b[39mwhile\u001b[39;00m (last_height \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m new_height) \u001b[39mand\u001b[39;00m (end_time \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m timeout):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000002?line=20'>21</a>\u001b[0m     waitNSeconds()\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000002?line=21'>22</a>\u001b[0m     new_height \u001b[39m=\u001b[39m driver\u001b[39m.\u001b[39mexecute_script(\u001b[39m\"\u001b[39m\u001b[39mreturn document.body.scrollHeight\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000002?line=23'>24</a>\u001b[0m     end_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m start_time\n",
+      "File \u001b[0;32m/mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py:37\u001b[0m, in \u001b[0;36mwaitNSeconds\u001b[0;34m(sleep_time)\u001b[0m\n\u001b[1;32m     <a href='file:///mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py?line=29'>30</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwaitNSeconds\u001b[39m(sleep_time\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m     <a href='file:///mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py?line=30'>31</a>\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='file:///mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py?line=31'>32</a>\u001b[0m \u001b[39m    WARNING\u001b[39;00m\n\u001b[1;32m     <a href='file:///mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py?line=32'>33</a>\u001b[0m \u001b[39m    -------\u001b[39;00m\n\u001b[1;32m     <a href='file:///mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py?line=33'>34</a>\u001b[0m \u001b[39m    Sleep is essential because if we run it too quickly, Facebook will detect the Bot and block this account.\u001b[39;00m\n\u001b[1;32m     <a href='file:///mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py?line=34'>35</a>\u001b[0m \n\u001b[1;32m     <a href='file:///mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py?line=35'>36</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> <a href='file:///mnt/16E8DB8EE8DB6A8F/Projects/Bots/facebook_group_file_downloader/bot_v2/helperFunctions.py?line=36'>37</a>\u001b[0m     time\u001b[39m.\u001b[39;49msleep(sleep_time)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -137,39 +138,35 @@
     "import time\n",
     "\n",
     "TIMEOUT = 60\n",
-    "SCROLL_PAUSE_TIME = 0.5\n",
     "\n",
     "\n",
     "def scrollNTimes(n_scroll=1, timeout=TIMEOUT):\n",
     "    \"\"\"\n",
-    "    Scroll down to load more files\n",
-    "    -> do this operation(scroll to load) for n times\n",
+    "    Scroll down N times to load (N * 15) files\n",
     "\n",
     "    \"\"\"\n",
     "    time_elapsed = 0\n",
     "\n",
     "    for i in range(n_scroll):\n",
+    "        end_time = 0\n",
+    "        new_height = 0\n",
     "        start_time = time.time()\n",
     "        last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
     "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
     "\n",
-    "        while time.time() - start_time < timeout:\n",
-    "            # Wait to load the page\n",
-    "            waitNSeconds(SCROLL_PAUSE_TIME)\n",
+    "        while (last_height >= new_height) and (end_time <= timeout):\n",
+    "            waitNSeconds()\n",
     "            new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
-    "\n",
-    "            if last_height == new_height:\n",
-    "                break\n",
     "\n",
     "            end_time = time.time() - start_time\n",
     "\n",
     "        time_elapsed += end_time\n",
     "        updateLog(\"Loading... {}/{}, took {}s\".format(i, n_scroll, end_time))\n",
     "\n",
-    "    updateLog(\"\\nLoading finished. Took {}s\\n\".format(time_elapsed))\n",
+    "    updateLog(\"\\nScrolling {} times took {}s\".format(n_scroll, time_elapsed))\n",
     "\n",
     "\n",
-    "scrollNTimes(100)\n"
+    "scrollNTimes(500)\n"
    ]
   },
   {
@@ -390,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
