--- a/facebook_group_file_downloader/bot_v2/main.ipynb
+++ b/facebook_group_file_downloader/bot_v2/main.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'selenium'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdecoder\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m JSONDecodeError\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mby\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m By\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TimeoutException\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msupport\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m expected_conditions \u001b[38;5;28;01mas\u001b[39;00m EC\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "MUST READ\n",
@@ -47,11 +35,11 @@
     "\n",
     "from constants import (\n",
     "    ENCODING,\n",
+    "    FILE_URL,\n",
     "    NAME_XPATH,\n",
     "    TYPE_DATE_XPATH,\n",
     "    TARGET_FILE_TYPE,\n",
     "    DOWNLOAD_DIRECTORY,\n",
-    "    FACEBOOK_GROUP_URL,\n",
     "    OPTION_BUTTON_XPATH,\n",
     "    POST_PERMALINK_XPATH,\n",
     "    TRACKER_FILE_LOCATION,\n",
@@ -87,70 +75,14 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "initializeWebpage(driver, FACEBOOK_GROUP_URL)\n"
+    "initializeWebpage(driver, FILE_URL)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1st scroll took 5.07s\n",
-      "2nd scroll took 5.03s\n",
-      "3rd scroll took 5.06s\n",
-      "4th scroll took 5.03s\n",
-      "5th scroll took 5.03s\n",
-      "6th scroll took 5.05s\n",
-      "7th scroll took 5.05s\n",
-      "8th scroll took 5.04s\n",
-      "9th scroll took 5.03s\n",
-      "10th scroll took 5.04s\n",
-      "11th scroll took 5.04s\n",
-      "12th scroll took 5.05s\n",
-      "13th scroll took 5.04s\n",
-      "14th scroll took 6.82s\n",
-      "15th scroll took 5.02s\n",
-      "16th scroll took 5.04s\n",
-      "17th scroll took 5.03s\n",
-      "18th scroll took 5.04s\n",
-      "19th scroll took 5.05s\n",
-      "20th scroll took 5.04s\n",
-      "21st scroll took 5.04s\n",
-      "22nd scroll took 5.04s\n",
-      "23rd scroll took 5.04s\n",
-      "24th scroll took 5.05s\n",
-      "25th scroll took 5.07s\n",
-      "26th scroll took 5.04s\n",
-      "27th scroll took 5.04s\n",
-      "28th scroll took 5.05s\n",
-      "29th scroll took 5.04s\n",
-      "30th scroll took 5.05s\n",
-      "31st scroll took 5.05s\n",
-      "32nd scroll took 5.06s\n",
-      "33rd scroll took 5.08s\n",
-      "34th scroll took 5.03s\n",
-      "35th scroll took 5.04s\n",
-      "\n",
-      "Total loading time 178.35s\n",
-      "XPATH's identifier (class names) has changed again! 🤯\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'file_option_buttons' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Projects\\Bots\\facebook_group_file_downloader\\bot_v2\\main.ipynb Cell 2'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=46'>47</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mXPATH\u001b[39m\u001b[39m'\u001b[39m\u001b[39ms identifier (class names) has changed again! 🤯\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=49'>50</a>\u001b[0m \u001b[39m\"\"\" MAIN LOOP \"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=50'>51</a>\u001b[0m \u001b[39mfor\u001b[39;00m idx, button \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(file_option_buttons):\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=51'>52</a>\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=52'>53</a>\u001b[0m         \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=53'>54</a>\u001b[0m \u001b[39m        CAUTION\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=54'>55</a>\u001b[0m \u001b[39m        -------\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=59'>60</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Projects/Bots/facebook_group_file_downloader/bot_v2/main.ipynb#ch0000001?line=60'>61</a>\u001b[0m \u001b[39m        \"\"\"\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'file_option_buttons' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# First load 35 * 15 = 525 files\n",
     "scroll_count = scrollNTimes(driver)\n",
@@ -384,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
