--- a/facebook_group_file_downloader/bot_v2/main.ipynb
+++ b/facebook_group_file_downloader/bot_v2/main.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nYou should be logged in by now!\\n\\nNote\\n----\\nif you have 2fa on for this account then you have to authorize it and then run the remaining cells manually\\n\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "MUST READ\n",
@@ -73,17 +84,171 @@
     "----\n",
     "if you have 2fa on for this account then you have to authorize it and then run the remaining cells manually\n",
     "\n",
-    "\"\"\"\n",
-    "\n",
-    "initializeWebpage(driver, FILE_URL)\n"
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st scroll took 3.12s\n",
+      "2nd scroll took 3.04s\n",
+      "3rd scroll took 3.03s\n",
+      "4th scroll took 3.03s\n",
+      "5th scroll took 3.02s\n",
+      "6th scroll took 3.03s\n",
+      "7th scroll took 3.03s\n",
+      "8th scroll took 3.03s\n",
+      "9th scroll took 3.04s\n",
+      "10th scroll took 3.02s\n",
+      "11th scroll took 3.03s\n",
+      "12th scroll took 3.03s\n",
+      "13th scroll took 3.03s\n",
+      "14th scroll took 3.05s\n",
+      "15th scroll took 3.04s\n",
+      "16th scroll took 3.03s\n",
+      "17th scroll took 3.04s\n",
+      "18th scroll took 3.05s\n",
+      "19th scroll took 3.04s\n",
+      "20th scroll took 3.03s\n",
+      "21st scroll took 3.05s\n",
+      "22nd scroll took 3.03s\n",
+      "23rd scroll took 3.05s\n",
+      "24th scroll took 3.05s\n",
+      "25th scroll took 3.05s\n",
+      "26th scroll took 3.03s\n",
+      "27th scroll took 3.05s\n",
+      "28th scroll took 3.05s\n",
+      "29th scroll took 3.04s\n",
+      "30th scroll took 3.04s\n",
+      "31st scroll took 3.05s\n",
+      "32nd scroll took 3.23s\n",
+      "33rd scroll took 3.25s\n",
+      "34th scroll took 3.04s\n",
+      "35th scroll took 3.15s\n",
+      "\n",
+      "Total loading time 106.94s\n",
+      "\n",
+      "Found 540 files in 0.68s\n",
+      "😪 Skipping (1): \"এক্ষণ পত্রিকা (দ্বাদশ বর্ষ) ১৩৮৩.pdf --- March 28, 2022 at 6:25 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (2): \"মৌচাক বৈশাখ ১৩৪২.pdf --- March 28, 2022 at 6:16 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (3): \"শ্রীমা সারদা ও তপোভূমি কোঠার - স্বামী শিবপ্রদানন্দ.pdf\", \"March 28, 2022 at 6:16 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (4): \"শ্রীশ্রীমায়ের বাড়ী ও উদ্বোধন কার্যালয়.pdf\", \"March 28, 2022 at 6:24 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (5): \"সামাজিক ও রাজনৈতিক জ্ঞনের অআকখ (বৈজ্ঞানিক কমিউনিজম).pdf\", \"March 28, 2022 at 6:30 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 31.02s... 🥳\n",
+      "✔ DONE (6): \"যে প্রহরে নেই আমি – রাসয়াত রহমান.pdf\", \"March 28, 2022 at 4:24 PM\"\n",
+      "😪 Skipping (7): \"পূর্ববঙ্গের কবিগান সংগ্রহ ও পর্যালোচনা - দীনেশচন্দ্র সিংহ.pdf --- March 28, 2022 at 2:16 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (8): \"পূর্ববঙ্গের কবিগান ১ম খণ্ড - দীনেশচন্দ্র সিংহ.pdf --- March 28, 2022 at 2:16 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (9): \"পুজার অর্ঘ্য - সুরেশচন্দ্র মজুমদার.pdf --- March 28, 2022 at 1:43 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (10): \"নব চর্যাপদ - শশিভূষণ দাশগুপ্ত সংগৃহীত ও সম্পাঃ অসিতকুমার বন্দ্যোপাধ্যায়.pdf --- March 28, 2022 at 1:45 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (11): \"নিত্য-পূজা-পদ্ধতি - সংঃ আশুতোষ মুখোপাধ্যায়.pdf --- March 28, 2022 at 1:42 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (12): \"নরোত্তম দাস ও তাহার রচনাবলী - ডঃ নীরদপ্রসাদ নাথ.pdf --- March 28, 2022 at 1:41 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (13): \"ধর্মসাধনা - স্বর্ণপ্রভা সেন.pdf --- March 28, 2022 at 1:41 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (14): \"কালীপুজা-চিত্রাবলী - চৈতণ্যদেব চট্টোপাধ্যায় ও বিষ্ণুপদ রায়চৌধুরী.pdf --- March 28, 2022 at 1:41 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "😪 Skipping (15): \"ঊনপঞ্চাশৎ - গোপালদাস চৌধুরী.pdf --- March 28, 2022 at 1:41 PM\", 🤔 Reason: ALREADY_DOWNLOADED\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (16): \"উড়িষ্যার সাধককবি দ্বারিকাদাসের মনসামঙ্গল - সম্পাঃ বিষ্ণুপদ পাণ্ডা.pdf\", \"March 28, 2022 at 1:41 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 19.2s... 🥳\n",
+      "✔ DONE (17): \"রোববার ২৭০৩২২.pdf\", \"March 27, 2022 at 6:43 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.52s... 🥳\n",
+      "✔ DONE (18): \"রবিবাসরীয় ২৭০৩২২.pdf\", \"March 27, 2022 at 6:41 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 5.25s... 🥳\n",
+      "✔ DONE (19): \"রবি বারোয়ারি ২৭০৩২২.pdf\", \"March 27, 2022 at 6:41 PM\"\n",
+      "\n",
+      "*** ERROR at পত্রিকা২৬০৩২২.pdf, date: March 27, 2022 at 6:41 PM ***\n",
+      "--> Message: stale element reference: element is not attached to the page document\n",
+      "  (Session info: chrome=99.0.4844.84)\n",
+      "Stacktrace:\n",
+      "Backtrace:\n",
+      "\tOrdinal0 [0x00C99943+2595139]\n",
+      "\tOrdinal0 [0x00C2C9F1+2148849]\n",
+      "\tOrdinal0 [0x00B24528+1066280]\n",
+      "\tOrdinal0 [0x00B26E04+1076740]\n",
+      "\tOrdinal0 [0x00B26CBE+1076414]\n",
+      "\tOrdinal0 [0x00B2763A+1078842]\n",
+      "\tOrdinal0 [0x00B7C529+1426729]\n",
+      "\tOrdinal0 [0x00B6B9EC+1358316]\n",
+      "\tOrdinal0 [0x00B7BAF2+1424114]\n",
+      "\tOrdinal0 [0x00B6B806+1357830]\n",
+      "\tOrdinal0 [0x00B46086+1204358]\n",
+      "\tOrdinal0 [0x00B46F96+1208214]\n",
+      "\tGetHandleVerifier [0x00E3B232+1658114]\n",
+      "\tGetHandleVerifier [0x00EF312C+2411516]\n",
+      "\tGetHandleVerifier [0x00D2F261+560433]\n",
+      "\tGetHandleVerifier [0x00D2E366+556598]\n",
+      "\tOrdinal0 [0x00C3286B+2173035]\n",
+      "\tOrdinal0 [0x00C375F8+2192888]\n",
+      "\tOrdinal0 [0x00C376E5+2193125]\n",
+      "\tOrdinal0 [0x00C411FC+2232828]\n",
+      "\tBaseThreadInitThunk [0x76B16739+25]\n",
+      "\tRtlGetFullPathName_UEx [0x77338E7F+1215]\n",
+      "\tRtlGetFullPathName_UEx [0x77338E4D+1165]\n",
+      "\n",
+      "\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (21): \"ভৌতিক ও অলৌকিক.pdf\", \"March 27, 2022 at 6:24 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 12.0s... 🥳\n",
+      "✔ DONE (22): \"হুগলী বা দক্ষিণ রাঢ় (প্রথমার্ধ) - অম্বিকাচরণ গুপ্ত.pdf\", \"March 27, 2022 at 6:13 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.52s... 🥳\n",
+      "✔ DONE (23): \"অদ্ভুত দিগ্বিজয় - পিনবিহারী চক্রবর্তী.pdf\", \"March 27, 2022 at 6:10 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 6.74s... 🥳\n",
+      "✔ DONE (24): \"এক জীবনে - সুনীল গঙ্গোপাধ্যায়.pdf\", \"March 27, 2022 at 8:55 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (25): \"মনে মনে খেলা - সুনীল গঙ্গোপাধ্যায়.pdf\", \"March 27, 2022 at 7:45 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.52s... 🥳\n",
+      "✔ DONE (26): \"প্রকাশ্য দিবালোকে - সুনীল গঙ্গোপাধ্যায়.pdf\", \"March 27, 2022 at 6:50 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (27): \"পায়ের তলার মাটি - সুনীল গঙ্গোপাধ্যায়.pdf\", \"March 27, 2022 at 5:49 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (28): \"বনজ্যোৎস্নায়,সবুজ অন্ধকারে - বুদ্ধদেব গুহ.pdf\", \"March 27, 2022 at 5:16 PM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 23.35s... 🥳\n",
+      "✔ DONE (29): \"বৃন্দাবনের ছয় গোস্বামী - নরেশচন্দ্র জানা.pdf\", \"March 27, 2022 at 9:59 AM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.52s... 🥳\n",
+      "✔ DONE (30): \"বিদ্যাপতির শিবগীত - সুধীরচন্দ্র মজুমদার.pdf\", \"March 27, 2022 at 9:57 AM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 17.05s... 🥳\n",
+      "✔ DONE (31): \"বাঙ্গালার বৈষ্ণবভাবাপন্ন মুসলমান কবির পদমঞ্জুষা - যতীমোহন ভট্টাচার্য.pdf\", \"March 27, 2022 at 9:57 AM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (32): \"বাইশ কবির মনসা-মঙ্গল বা বাইশা - সম্পাঃ আশুতোষ ভট্টাচার্য.pdf\", \"March 27, 2022 at 9:57 AM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 41.01s... 🥳\n",
+      "✔ DONE (33): \"পদামৃতসমুদ্র - ডঃ উমা রায়.pdf\", \"March 27, 2022 at 9:57 AM\"\n",
+      "\n",
+      "Successfully downloaded. Continuing after 0.51s... 🥳\n",
+      "✔ DONE (34): \"কবি সঞ্জয় বিরচিত মহাভারত - সম্পাঃ মুনীন্দ্রকুমার ঘোষ.pdf\", \"March 27, 2022 at 9:57 AM\"\n"
+     ]
+    }
+   ],
    "source": [
+    "initializeWebpage(driver, FILE_URL)\n",
+    "\n",
     "# First load 35 * 15 = 525 files\n",
     "scroll_count = scrollNTimes(driver)\n",
     "\n",
@@ -200,7 +365,7 @@
     "            continue\n",
     "\n",
     "        is_downloaded, update_tracker_file = checkDownloadStatus(\n",
-    "            _post_id, _name, _date, downloaded_file_list, registered_file_list\n",
+    "            _post_id, _name, downloaded_file_list, registered_file_list\n",
     "        )\n",
     "\n",
     "        if is_downloaded:\n",
